M5 front and M4 small fix

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -135,3 +135,37 @@
     </div>
     <!-- /.modal-dialog -->
 </div>
+
+
+<div class="modal registration-modal fade" id="offerSuccess">
+    <div class="modal-dialog" role="document">
+        <div class="modal-body">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <div class="final-stage">
+                    <div class="col-xs-12">
+                        <img class="final-image" src="{{ asset('assets/images/congratulations.png') }}" alt="">
+                    </div>
+                    <div class="row">
+                        <h2>Your offer created</h2>
+
+                        <p class="description">
+
+                        </p>
+                        <p class="description">
+                            And if you need any help, please do not hesitate to use the FAQ
+                        </p>
+
+                        <div class="controls">
+                            <div class="button-gradient filled">
+                                <button data-dismiss="modal" class="btn">Have a nice journey on ACTED</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
