--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/dashboardmenu.html.twig
@@ -15,7 +15,7 @@
         <span class="caret"></span></button>
     <ul class="dropdown-menu">
         <li class="menu-block"><a href="/dashboard/messages/{{ app.user.id }}" class="active">Messages</a></li>
-        <li class="menu-block"><a href="//dashboard/enquiries/{{ app.user.id }}">Bookings</a></li>
+        <li class="menu-block"><a href="/dashboard/enquiries/{{ app.user.id }}">Bookings</a></li>
         <li class="menu-block"><a href="/agenda">Agenda</a></li>
         <li class="menu-block"><a href="/prices">Prices</a></li>
         <li class="menu-block"><a href="/payment">Payment & Accounts</a></li>
