update chatRoom, add push to chat

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -29,8 +29,9 @@
             $(function () {
                 $('#main').on('click', '#click-but', function () {
                    var text = $('#chat-room').val();
-                    if (text.length > 5) {
-                        session.publish("acted/chat/1", text);
+                    if (text.length > 1) {
+                        $.post("{{ path('websocket_push', {'chatId': 1}) }}", {'message': text});
+//                        session.publish("acted/chat/1", text);
                     }
                 });
 
@@ -43,7 +44,7 @@
     <h1>Not auth user</h1>
 {% endif %}
 <div id="main">
-    <textarea name="chat-room" id="chat-room" cols="30" rows="10"></textarea>
+    <textarea name="chat-room" id="chat-room" cols="30" rows="10" value="jsdffh hf sjks"></textarea>
     <button id="click-but">some button</button>
 </div>
 
