--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -98,7 +98,7 @@
                             {{ performance.techRequirement }}
                         </p>
 
-                        <div class="controls">
+                        <!--<div class="controls">
                             <div class="button-gradient follow">
                                 <button class="btn">REQUEST FREE QUOTE</button>
                             </div>
@@ -106,7 +106,7 @@
                             <p>
                                 <a href="#">Technical requirements</a>
                             </p>
-                        </div>
+                        </div>-->
                     </div>
                 </article>
 
@@ -215,7 +215,7 @@
                         <p class="perfomanceInfoEdiatable" data-type="textarea" maxlength="250" data-pk="" data-title="">
                         </p>
 
-                        <div class="controls">
+                        <!--<div class="controls">
                             <div class="button-gradient follow">
                                 <button class="btn">REQUEST FREE QUOTE</button>
                             </div>
@@ -223,7 +223,7 @@
                             <p>
                                 <a href="#">Technical requirements</a>
                             </p>
-                        </div>
+                        </div>-->
                     </div>
                 </article>
 
