--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/list.html.twig
@@ -7,7 +7,6 @@
 
         <div class="enquiries-wrap">
             {% for chat in chats|reverse %}
-                {{ dump(chat) }}
             <article class="enq-block clearfix" id="{{ chat.offer.id }}">
                 <span class="received-time">
                      <i class="enq-icon icon-timing"></i> Received {{ chat.last_message.time_from_get }} ago
@@ -53,8 +52,9 @@
                             <button type="button" class="btn register">Send Quotation</button>
                         </div>
 
+
                         <div class="button-gradient filled blue">
-                            <button type="button" class="btn register"><a href="/dashboard/chat/{{ chat.id }}">Send Message</a></button>
+                            <button type="button" class="btn register"><a href="/dashboard/chat/{{ chat.chat_id }}">Send Message</a></button>
                         </div>
 
                         <div class="button-gradient">
