--- a/web/css/style-retina.css
+++ b/web/css/style-retina.css
@@ -10594,3 +10594,14 @@ a.disabled {
 {
     cursor: pointer;
 }
+
+.btn > a
+{
+    color: #fff;
+    font-size: 15px;
+    font-family: LatoBold;
+}
+.btn > a:hover
+{
+    text-decoration: none;
+}
