--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/chat_room.html.twig
@@ -6,10 +6,10 @@
         {% include 'ActedLegalDocsBundle:ChatRoom:dashboardmenu.html.twig' %}
 
 
-        {{ dump(chat) }}
         <div class="wrap">
             <a class="btn-back" href="/dashboard/messages/{{ app.user.id }}">Back to messages</a>
             <h2 class="main-title">Chatroom #{{ chat.chat_id }}</h2>
+            <div class="hidden" id="chatId">{{ chat.chat_id }}</div>
             <!--detail form start-->
             <form action="#" class="detail-form">
                 <div class="row clearfix">
@@ -71,6 +71,10 @@
                                 <div class="map-holder">
                                     <div id="map"></div>
                                     <em class="note">Pin your location on the map</em>
+                                </div>
+                                <div class="hidden" id="eventLocationCoordinates">
+                                    <span class="latitude">{{ chat.event.city.latitude }}</span>
+                                    <span class="longitude">{{ chat.event.city.longitude }}</span>
                                 </div>
                             </div>
                         </div>
@@ -199,73 +203,45 @@
         <div id="twocolumns">
             <div class="col-1">
                 <ul class="comments-list">
-                    <li>
-                        <a href="#" class="img-holder">
-                            <img src="assets/images/avatar.jpg" alt="image description">
-                        </a>
-                        <div class="holder">
-                            <div class="box">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad asperiores aspernatur at commodi consectetur cum, deserunt dolores earum eum eveniet harum impedit libero nisi nobis pariatur perspiciatis placeat provident quis repellat repellendus sed ut velit? Animi atque commodi doloremque esse ex facilis fugit in iusto laudantium magni minima numquam qui saepe soluta tempora ullam, voluptas?</p>
-                                <em class="date">Today at 12.34 pm</em>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="right active">
-                        <a href="#" class="img-holder">
-                            <img src="assets/images/Avatar_profile.jpg" alt="image description">
-                        </a>
-                        <div class="holder">
-                            <div class="box">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto autem maxime optio quis. Consectetur, ducimus illum impedit pariatur temporibus velit!</p>
-                                <em class="date">Today at 12.35 am</em>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#" class="img-holder">
-                            <img src="assets/images/avatar.jpg" alt="image description">
-                        </a>
-                        <div class="holder">
-                            <div class="box">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium alias consequuntur ea eligendi error excepturi facere fugiat ipsum iusto labore laboriosam laudantium, magni maiores molestiae mollitia perspiciatis quam, quos rem repellat repellendus sunt suscipit temporibus, totam vel? Amet deserunt enim iure necessitatibus. Aperiam assumenda dolores eius esse est facere, nisi nostrum quod reprehenderit sint suscipit tempora voluptatum. Assumenda aut dolorum earum fuga odit pariatur quod ratione voluptate. Alias amet, debitis est eveniet fugit ipsam sunt?</p>
-                                <em class="date">Today at 12.34 pm</em>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="right active">
-                        <a href="#" class="img-holder">
-                            <img src="assets/images/Avatar_profile.jpg" alt="image description">
-                        </a>
-                        <div class="holder">
-                            <div class="box">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto autem maxime optio quis. Consectetur, ducimus illum impedit pariatur temporibus velit!</p>
-                                <em class="date">Today at 12.35 am</em>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <a href="#" class="img-holder">
-                            <img src="assets/images/avatar.jpg" alt="image description">
-                        </a>
-                        <div class="holder">
-                            <div class="box">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium alias consequuntur ea eligendi error excepturi facere fugiat ipsum iusto labore laboriosam laudantium, magni maiores molestiae mollitia perspiciatis quam, quos rem repellat repellendus sunt suscipit temporibus, totam vel? Amet deserunt enim iure necessitatibus. Aperiam assumenda dolores eius esse est facere, nisi nostrum quod reprehenderit sint suscipit tempora voluptatum. Assumenda aut dolorum earum fuga odit pariatur quod ratione voluptate. Alias amet, debitis est eveniet fugit ipsam sunt?</p>
-                                <em class="date">Today at 12.34 pm</em>
-                            </div>
-                        </div>
-                    </li>
+                    {% for chatMessage in chat.message |reverse %}
+                        {% if chatMessage.sender_user.role_name == "Client" %}
+                            <li>
+                                <a href="#" class="img-holder">
+                                    <img src="/assets/images/noAvatar.png" alt="image description">
+                                </a>
+                                <div class="holder">
+                                    <div class="box">
+                                        <p>{{ chatMessage.message_text }}</p>
+                                        <em class="date">{{ chatMessage.time_from_get }}</em>
+                                    </div>
+                                </div>
+                            </li>
+                        {% else %}
+                            <li class="right active">
+                                <a href="#" class="img-holder">
+                                    <img src="{{ chatMessage.sender_user.avatar }}" alt="image description">
+                                </a>
+                                <div class="holder">
+                                    <div class="box">
+                                        <p>{{ chatMessage.message_text }}</p>
+                                        <em class="date">{{ chatMessage.time_from_get }}</em>
+                                    </div>
+                                </div>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
                 </ul>
             </div>
             <div class="col-2">
                 <form class="message-form" action="#">
-                    <textarea class="textarea" placeholder="Write your message"></textarea>
+                    <textarea class="textarea" id="chat-room" placeholder="Write your message"></textarea>
                     <div class="upload-box">
                         <div class="row">
                             <input type="file" name="files[]" id="filer_input1" multiple="multiple">
                         </div>
                         <div class="controls">
                             <div class="button-gradient filled">
-                                <button class="btn" type="submit">Send</button>
+                                <button class="btn" id="sendMsg" type="submit">Send</button>
                             </div>
                         </div>
                     </div>
@@ -287,16 +263,9 @@
 
 </main>
 
-{% if app.user %}
+
     <script type="text/javascript" src="{{ asset('bundles/goswebsocket/js/gos_web_socket_client.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/goswebsocket/js/vendor/autobahn.min.js') }}"></script>
-{% else %}
-    <h1>Not auth user</h1>
-{% endif %}
-<div id="main">
-    <textarea name="chat-room" id="chat-room" cols="30" rows="10" value="jsdffh hf sjks"></textarea>
-    <button id="click-but">some button</button>
-</div>
 
 {% include 'ActedLegalDocsBundle:Default:footer.html.twig' %}
 <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
