prevent ask quote from artist, choose login or sign up

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/registration.html.twig
@@ -212,11 +212,6 @@
 
             <div class="modal-body">
                 <form class="form-block login-form" action="{{ path('security_login_check') }}" method="post">
-                    {#{% if error %}
-                        <div class="alert alert-danger">
-                            {{ error.messageKey|trans(error.messageData) }}
-                        </div>
-                    {% endif %}#}
                     <span class="error" id="errorLogIn"></span>
                     <div class="form-group">
                         <label for="user_email">Email</label>
@@ -251,6 +246,35 @@
                     </div>
                 </form>
 
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade login-modal" id="ChooseAfterRequestModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Log In or Sign Up</h4>
+            </div>
+
+            <div class="modal-body">
+                <div class="col-md-6">
+                    <div class="controls category-controls">
+                        <div class="button-gradient follow">
+                            <button id="signUpChoose" class="btn">Sign Up</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="controls category-controls">
+                        <div class="button-gradient follow">
+                            <button id="LogInChoose" class="btn">Log In</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
             </div>
         </div>
     </div>
