Fixes in messages

--- a/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/ChatRoom/all_messages.html.twig
@@ -26,7 +26,7 @@
                         </div>
                         <div class="user-info">
                             <span class="user-name">{{ message.sender_user.firstname }}</span>
-                            <span class="time">Today at 11:34 pm</span>
+                            <span class="time">{{ message.time_from_get }}</span>
                         </div>
                         <div class="message-block">
                             <div class="col-lg-10 col-sm-10 text-block">
@@ -38,7 +38,7 @@
 
                                 <div class="controls hidden-xs">
                                     <div class="button-gradient filled blue">
-                                        <a href="/chat-room" class="btn register">See Conversation</a>
+                                        <a href="/dashboard/chat/{{ message.chat_room.chat_id }}" class="btn register">See Conversation</a>
                                     </div>
                                 </div>
                             </div>
