--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -127,6 +127,13 @@
                                 <button class="btn" id="quoteRequsetSend">Send</button>
                             </div>
                         </div>
+
+                        <div class="quote-box alreadyHasEventArtist">
+                            <p>Quote request already sent. If you want to see the status or contact<br>the artist, you can access your
+                                <a href="#">chatroom</a>
+                            </p>
+                            <p>You can also ask a quote for <a href="#" id="new-event">new event</a></p>
+                        </div>
                     </div>
                 </div>
             </form>
