Check if User select performance in Quote request

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -113,6 +113,7 @@
 
                         <ul class="profile-categories requestQuotePerformances ul-reset">
                         </ul>
+                        <span class="errorCat"></span>
 
                         <div class="row add-comment-btn">
                             <a href="#" id="comment_toggle">Add a comment</a>
